--- a/Chat/MVVM/Views/RegistrationView.xaml
+++ b/Chat/MVVM/Views/RegistrationView.xaml
@@ -4,15 +4,107 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Chat.MVVM.Views"
+             xmlns:userControls="clr-namespace:Chat.MVVM.Views.UserControls"
              xmlns:viewModels="clr-namespace:Chat.MVVM.ViewModels" 
+             xmlns:svgc="http://sharpvectors.codeplex.com/svgc/"
+             xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              d:DataContext="{d:DesignInstance Type=viewModels:RegistrationViewModel}"
              >
-    
-    <StackPanel VerticalAlignment="Center">
-        <Label Content="registr" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="36" Foreground="White"/>
-        <Button HorizontalAlignment="Center" Background="Tomato" Width="300" Height="120" Content="Back To Login"
-                Command="{Binding NavigateToLoginCommand}"/>
-    </StackPanel>
+
+    <Grid Background="{DynamicResource MainBackground}">
+        <StackPanel HorizontalAlignment="Center">
+
+            <TextBlock Margin="20" HorizontalAlignment="Center" FontSize="40"
+                       Foreground="{DynamicResource MainForeground}"
+                       Text="Sign up">
+            </TextBlock>
+
+            <userControls:Logotype Height="80"/>
+
+            <Grid Margin="0,30" Width="400">
+
+                <userControls:FilledRoundedBorder Style="{DynamicResource EntryWindowsFilledRoundedBorderStyle}"/>
+
+                <StackPanel Margin="24">
+
+                    <TextBlock Style="{DynamicResource EntryWindowsTextBlockStyle}"
+                               Margin="3, 0"
+                               Text="Username"/>
+                    
+
+                    <userControls:ClearableTextBox Style="{DynamicResource EntryWindowsTextBoxStyle}"
+                                                   Margin="0, 10, 0, 20"
+                                                   PlaceholderText="Enter username..."/>
+
+                    <TextBlock Style="{DynamicResource EntryWindowsTextBlockStyle}"
+                               Margin="3, 0"
+                               Text="Email"/>
+
+
+                    <userControls:ClearableTextBox Style="{DynamicResource EntryWindowsTextBoxStyle}"
+                                                   Margin="0, 10, 0, 20"
+                                                   PlaceholderText="Enter email..."/>
+
+
+                    <TextBlock Style="{DynamicResource EntryWindowsTextBlockStyle}"
+                               Margin="3, 0"
+                               Text="Password"/>
+                    
+
+                    <userControls:ClearablePasswordBox Style="{DynamicResource EntryWindowsPasswordBoxStyle}"
+                                                       Margin="0, 10, 0, 20"
+                                                       PlaceholderText="Enter password..."/>
+                    
+
+                    <TextBlock Style="{DynamicResource EntryWindowsTextBlockStyle}"
+                               Margin="3, 0"
+                               Text="Confirm Password"/>
+                    
+
+                    <userControls:ClearablePasswordBox Style="{DynamicResource EntryWindowsPasswordBoxStyle}"
+                                   Margin="0, 10, 0, 20"
+                                   PlaceholderText="Enter password again..."/>
+                    
+
+                    <ui:Button Margin="0, 5, 0, 0"
+                               HorizontalAlignment="Stretch"
+                               Appearance="Success"
+                               Background="Green"
+                               Foreground="{DynamicResource MainForeground}">
+
+                        <TextBlock Style="{DynamicResource EntryWindowsTextBlockStyle}"
+                                   Text="Sign up"/>
+
+                    </ui:Button>
+
+                </StackPanel>
+
+            </Grid>
+
+            <Grid>
+
+                <userControls:FilledRoundedBorder Style="{DynamicResource EntryWindowsFilledRoundedBorderStyle}"
+                                                  Background="Transparent"/>
+
+
+                <StackPanel Margin="16"
+                            HorizontalAlignment="Center">
+
+                    <ui:Button Appearance="Dark"
+                               Background="Transparent"
+                               Command="{Binding NavigateToLoginCommand}">
+
+                        <TextBlock Style="{StaticResource EntryWindowsHyperlinkStyle}"
+                                   Text="Back to 'Sign in'"/>
+
+                    </ui:Button>
+                    
+                </StackPanel>
+
+            </Grid>
+
+        </StackPanel>
+    </Grid>
 </UserControl>
