--- a/Chat/MVVM/Views/RecoveryView.xaml
+++ b/Chat/MVVM/Views/RecoveryView.xaml
@@ -11,7 +11,16 @@
              d:DesignHeight="450" d:DesignWidth="800"
              d:DataContext="{d:DesignInstance Type=viewModels:RecoveryViewModel}"
              >
-    <Grid>
-            
-    </Grid>
+
+    <StackPanel HorizontalAlignment="Center"
+                Background="{DynamicResource MainBackground}"
+                Width="500">
+
+        <TextBlock Style="{DynamicResource EntryWindowsCaptionStyle}"
+                   Text="Recovery of Password"/>
+
+        <userControls:Logotype Height="80"/>
+
+    </StackPanel>
+    
 </UserControl>
