dev.1.43. new UserControl: ErrorsItemsControl and usage of its in upgraded ClearableTextBox

--- a/Chat/Styles/EntryWindows/EntryWindowsTextBoxStyle.xaml
+++ b/Chat/Styles/EntryWindows/EntryWindowsTextBoxStyle.xaml
@@ -20,6 +20,8 @@
 
         <Setter Property="PlaceholderFontSize" Value="16"/>
 
+        <Setter Property="ErrorMessageFontSize" Value="16"/>
+
     </Style>
     
 </ResourceDictionary>
