--- a/Chat/MVVM/Views/UserControls/ClearableTextBox.xaml
+++ b/Chat/MVVM/Views/UserControls/ClearableTextBox.xaml
@@ -5,54 +5,65 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Chat.MVVM.Views.UserControls"
              xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+             xmlns:userControls="clr-namespace:Chat.MVVM.Views.UserControls" 
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              x:Name="root"
+             Validation.ErrorTemplate="{StaticResource errorTemplate}"
              >
-    
+
     <Grid GotFocus="Grid_GotFocus"
-          LostFocus="Grid_LostFocus">
-        
+        LostFocus="Grid_LostFocus">
+
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition x:Name="ColumnWithButton" Width="0"/>
         </Grid.ColumnDefinitions>
 
-        
+
         <Border x:Name="Border" 
-                Grid.ColumnSpan="2"
-                BorderBrush="{Binding BorderBrush, ElementName=root}">
+            Grid.ColumnSpan="2"
+            BorderBrush="{Binding BorderBrush, ElementName=root}">
 
             <Rectangle x:Name="Rect"/>
-            
+
         </Border>
 
-        
+
         <TextBox x:Name="TextBox" 
-                 Panel.ZIndex="1"
-                 CaretBrush="{Binding Foreground, ElementName=root}" 
-                 Foreground="{Binding Foreground, ElementName=root}"
-                 FontSize="{Binding FontSize, ElementName=root}"
-                 TextChanged="TextBox_TextChanged"/>
+                Panel.ZIndex="1"
+                Text="{Binding Text, ElementName=root, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                CaretBrush="{Binding Foreground, ElementName=root}" 
+                Foreground="{Binding Foreground, ElementName=root}"
+                FontSize="{Binding FontSize, ElementName=root}"
+                TextChanged="TextBox_TextChanged"/>
 
-        
+
         <TextBox x:Name="Placehold" 
-                 Panel.ZIndex="0" 
-                 VerticalAlignment="Center"
-                 FontSize="{Binding FontSize, ElementName=root}"
-                 Foreground="{Binding Foreground, ElementName=root}"/>
+                Panel.ZIndex="0" 
+                VerticalAlignment="Center"
+                FontSize="{Binding FontSize, ElementName=root}"
+                Foreground="{Binding Foreground, ElementName=root}"/>
 
-        
+
         <Button x:Name="ClearTextBtn" 
-                Grid.Column="1" 
-                Visibility="Collapsed"
-                Click="ClearTextBtn_Click">
+            Grid.Column="1" 
+            Visibility="Collapsed"
+            Click="ClearTextBtn_Click">
 
             <ui:SymbolIcon Symbol="Dismiss16" 
-                           Foreground="{Binding Foreground, ElementName=root}"/>
-            
+                        Foreground="{Binding Foreground, ElementName=root}"/>
+
         </Button>
-        
+
+        <userControls:ErrorsItemsControl x:Name="ErrorsItemsControl"
+                                            Grid.Row="1"/>
+
     </Grid>
-    
+
 </UserControl>
