dev.1.46. ErrorsItemsControl's ErrorMessages are multiline

--- a/Chat/MVVM/Views/UserControls/ErrorsItemsControl.xaml
+++ b/Chat/MVVM/Views/UserControls/ErrorsItemsControl.xaml
@@ -13,6 +13,7 @@
                 <TextBlock FontSize="{Binding FontSize, ElementName=itemsControl}" 
                            Margin="5,4,0,0" 
                            Foreground="Red" 
+                           TextWrapping="WrapWithOverflow"
                            Text="{Binding ErrorContent}"/>
             </DataTemplate>
         </ItemsControl.ItemTemplate>
