--- a/Chat/MVVM/Views/UserControls/ClearablePasswordBox.xaml
+++ b/Chat/MVVM/Views/UserControls/ClearablePasswordBox.xaml
@@ -1,17 +1,25 @@
-﻿<UserControl x:Class="Chat.MVVM.Views.UserControls.ClearablePasswordBox"
+﻿<infrastucture:InputBox x:Class="Chat.MVVM.Views.UserControls.ClearablePasswordBox"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+             xmlns:userControls="clr-namespace:Chat.MVVM.Views.UserControls" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Chat.MVVM.Views.UserControls"
+             xmlns:infrastucture="clr-namespace:Chat.MVVM.Views.UserControls.Additional_Infrastructure"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800"
              x:Name="root"
+             Validation.ErrorTemplate="{StaticResource errorTemplate}"
              >
 
     <Grid GotFocus="PassBoxGrid_GotFocus" 
-          LostFocus="PassBoxGrid_LostFocus">
+          LostFocus="PassBoxGrid_LostFocus"
+          DataContext="{Binding ElementName=root}">
+
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
         
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
@@ -21,26 +29,33 @@
 
         <Border x:Name="Border" 
                 Grid.ColumnSpan="2"
-                BorderBrush="{Binding BorderBrush, ElementName=root}">
-            
-            <Rectangle x:Name="PassBoxBackground"/>
+                BorderBrush="{Binding BorderBrush}"
+                CornerRadius="{Binding Roundation}"
+                BorderThickness="{Binding BorderThickness}">
+
+            <Rectangle x:Name="PassBoxBackground" 
+                       Fill="{Binding Background}"
+                       RadiusX="{Binding Roundation}"
+                       RadiusY="{Binding Roundation}"/>
             
         </Border>
 
         
         <PasswordBox x:Name="PassBox" 
                      Panel.ZIndex="1"
-                     CaretBrush="{Binding Foreground, ElementName=root}"
-                     Foreground="{Binding Foreground, ElementName=root}"
-                     FontSize="{Binding FontSize, ElementName=root}"
+                     infrastucture:BoundPasswordBox.BoundPassword="{Binding Path=Password, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                     CaretBrush="{Binding Foreground}"
+                     Foreground="{Binding Foreground}"
+                     FontSize="{Binding FontSize}"
                      PasswordChanged="PassBox_PasswordChanged"/>
 
         
         <TextBox x:Name="Placehold" 
                  Panel.ZIndex="0"
                  VerticalAlignment="Center"
-                 FontSize="{Binding FontSize, ElementName=root}"
-                 Foreground="{Binding Foreground, ElementName=root}"/>
+                 FontSize="{Binding PlaceholderFontSize}"
+                 Foreground="{Binding PlaceholderForeground}"
+                 Text="{Binding PlaceholderText}"/>
 
         
         <Button x:Name="ClearTextBtn" 
@@ -49,10 +64,14 @@
                 Click="ClearTextBtn_Click">
 
             <ui:SymbolIcon Symbol="Dismiss16" 
-                           Foreground="{Binding Foreground, ElementName=root}"/>
+                           Foreground="{Binding Foreground}"/>
             
         </Button>
-        
+
+        <userControls:ErrorsItemsControl x:Name="ErrorsItemsControl"
+                                         Grid.Row="1"
+                                         FontSize="{Binding ErrorMessageFontSize}"/>
+
     </Grid>
     
-</UserControl>
+</infrastucture:InputBox>
