--- a/Chat/MVVM/Views/UserControls/ClearableTextBox.xaml
+++ b/Chat/MVVM/Views/UserControls/ClearableTextBox.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Chat.MVVM.Views.UserControls.ClearableTextBox"
+﻿<infrastucture:InputBox x:Class="Chat.MVVM.Views.UserControls.ClearableTextBox"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,14 +6,15 @@
              xmlns:local="clr-namespace:Chat.MVVM.Views.UserControls"
              xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
              xmlns:userControls="clr-namespace:Chat.MVVM.Views.UserControls" 
+             xmlns:infrastucture="clr-namespace:Chat.MVVM.Views.UserControls.Additional_Infrastructure"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800"
              x:Name="root"
              Validation.ErrorTemplate="{StaticResource errorTemplate}"
              >
 
     <Grid GotFocus="Grid_GotFocus"
-        LostFocus="Grid_LostFocus">
+          LostFocus="Grid_LostFocus"
+          DataContext="{Binding ElementName=root}">
 
         <Grid.RowDefinitions>
             <RowDefinition/>
@@ -27,28 +28,34 @@
 
 
         <Border x:Name="Border" 
-            Grid.ColumnSpan="2"
-            BorderBrush="{Binding BorderBrush, ElementName=root}">
+                Grid.ColumnSpan="2"
+                BorderBrush="{Binding BorderBrush}"
+                CornerRadius="{Binding Roundation}"
+                BorderThickness="{Binding BorderThickness}">
 
-            <Rectangle x:Name="Rect"/>
+            <Rectangle x:Name="Rect" 
+                       Fill="{Binding Background}"
+                       RadiusX="{Binding Roundation}"
+                       RadiusY="{Binding Roundation}"/>
 
         </Border>
 
 
         <TextBox x:Name="TextBox" 
                 Panel.ZIndex="1"
-                Text="{Binding Text, ElementName=root, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                CaretBrush="{Binding Foreground, ElementName=root}" 
-                Foreground="{Binding Foreground, ElementName=root}"
-                FontSize="{Binding FontSize, ElementName=root}"
+                Text="{Binding Text, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                CaretBrush="{Binding Foreground}" 
+                Foreground="{Binding Foreground}"
+                FontSize="{Binding FontSize}"
                 TextChanged="TextBox_TextChanged"/>
 
 
         <TextBox x:Name="Placehold" 
                 Panel.ZIndex="0" 
                 VerticalAlignment="Center"
-                FontSize="{Binding FontSize, ElementName=root}"
-                Foreground="{Binding Foreground, ElementName=root}"/>
+                 FontSize="{Binding PlaceholderFontSize}"
+                 Foreground="{Binding PlaceholderForeground}"
+                 Text="{Binding PlaceholderText}"/>
 
 
         <Button x:Name="ClearTextBtn" 
@@ -57,13 +64,14 @@
             Click="ClearTextBtn_Click">
 
             <ui:SymbolIcon Symbol="Dismiss16" 
-                        Foreground="{Binding Foreground, ElementName=root}"/>
+                        Foreground="{Binding Foreground}"/>
 
         </Button>
 
         <userControls:ErrorsItemsControl x:Name="ErrorsItemsControl"
-                                            Grid.Row="1"/>
+                                         Grid.Row="1"
+                                         FontSize="{Binding ErrorMessageFontSize}"/>
 
     </Grid>
 
-</UserControl>
+</infrastucture:InputBox>
