--- a/Chat/Styles/EntryWindows/EntryWindowsPasswordBoxStyle.xaml
+++ b/Chat/Styles/EntryWindows/EntryWindowsPasswordBoxStyle.xaml
@@ -20,6 +20,8 @@
 
         <Setter Property="PlaceholderFontSize" Value="16"/>
 
+        <Setter Property="ErrorMessageFontSize" Value="16"/>
+
     </Style>
     
 </ResourceDictionary>
