--- a/Chat/MVVM/Views/RegistrationView.xaml
+++ b/Chat/MVVM/Views/RegistrationView.xaml
@@ -32,7 +32,8 @@
                                Text="Username"/>
                     
 
-                    <userControls:ClearableTextBox Style="{DynamicResource EntryWindowsTextBoxStyle}"
+                    <userControls:ClearableTextBox Text="{Binding Username, Mode=TwoWay, ValidatesOnExceptions=True}" 
+                                                   Style="{DynamicResource EntryWindowsTextBoxStyle}"
                                                    Margin="0, 10, 0, 20"
                                                    PlaceholderText="Enter username..."/>
 
@@ -41,7 +42,8 @@
                                Text="Email"/>
 
 
-                    <userControls:ClearableTextBox Style="{DynamicResource EntryWindowsTextBoxStyle}"
+                    <userControls:ClearableTextBox Text="{Binding Email, Mode=TwoWay, ValidatesOnExceptions=True}" 
+                                                   Style="{DynamicResource EntryWindowsTextBoxStyle}"
                                                    Margin="0, 10, 0, 20"
                                                    PlaceholderText="Enter email..."/>
 
@@ -51,7 +53,8 @@
                                Text="Password"/>
                     
 
-                    <userControls:ClearablePasswordBox Style="{DynamicResource EntryWindowsPasswordBoxStyle}"
+                    <userControls:ClearablePasswordBox Password="{Binding Password, Mode=TwoWay, ValidatesOnExceptions=True}" 
+                                                       Style="{DynamicResource EntryWindowsPasswordBoxStyle}"
                                                        Margin="0, 10, 0, 20"
                                                        PlaceholderText="Enter password..."/>
                     
@@ -61,9 +64,10 @@
                                Text="Confirm Password"/>
                     
 
-                    <userControls:ClearablePasswordBox Style="{DynamicResource EntryWindowsPasswordBoxStyle}"
-                                   Margin="0, 10, 0, 20"
-                                   PlaceholderText="Enter password again..."/>
+                    <userControls:ClearablePasswordBox Password="{Binding ConfirmationPassword, Mode=TwoWay, ValidatesOnExceptions=True}" 
+                                                       Style="{DynamicResource EntryWindowsPasswordBoxStyle}"
+                                                       Margin="0, 10, 0, 20"
+                                                       PlaceholderText="Enter password again..."/>
                     
 
                     <ui:Button Margin="0, 5, 0, 0"
