dev.1.53. Confirmation Buttons on Login- and RegistrationView are unable when validation error occurs

--- a/Chat/MVVM/Views/LoginView.xaml
+++ b/Chat/MVVM/Views/LoginView.xaml
@@ -50,7 +50,8 @@
                                                    PlaceholderText="Enter password..."/>
 
                 
-                <ui:Button Margin="0, 25, 0, 0" 
+                <ui:Button Command="{Binding SignInCommand}" 
+                           Margin="0, 25, 0, 0" 
                            HorizontalAlignment="Stretch" 
                            Appearance="Success" 
                            Background="Green" 
