--- a/Chat/MVVM/Views/RegistrationView.xaml
+++ b/Chat/MVVM/Views/RegistrationView.xaml
@@ -70,7 +70,8 @@
                                                        PlaceholderText="Enter password again..."/>
                     
 
-                    <ui:Button Margin="0, 5, 0, 0"
+                    <ui:Button Command="{Binding SignUpCommand}" 
+                               Margin="0, 5, 0, 0"
                                HorizontalAlignment="Stretch"
                                Appearance="Success"
                                Background="Green"
