dev.1.54. Window's Icon is added

--- a/Chat/MVVM/Views/MainWindow.xaml
+++ b/Chat/MVVM/Views/MainWindow.xaml
@@ -10,7 +10,8 @@
         Height="720" Width="1200"
         MinHeight="540" MinWidth="480"
         d:DataContext="{d:DesignInstance Type=viewModels:MainViewModel}"
-        Style="{StaticResource NonDefaultWindowStyle}">
+        Style="{StaticResource NonDefaultWindowStyle}"
+        Icon="../../Images/logo.png">
     
     <Grid Background="{DynamicResource MainBackground}">
         
