--- a/Chat/App.xaml
+++ b/Chat/App.xaml
@@ -37,6 +37,10 @@
                 
                 <!--DataTemplates for Views-->
                 <ResourceDictionary>
+
+                    <DataTemplate DataType="{x:Type viewModels:ChatViewModel}">
+                        <views:ChatView/>
+                    </DataTemplate>
                     
                     <DataTemplate DataType="{x:Type viewModels:LoginViewModel}">
                         <views:LoginView/>
