--- a/Chat/MVVM/Views/RegistrationView.xaml
+++ b/Chat/MVVM/Views/RegistrationView.xaml
@@ -51,9 +51,11 @@
                     <TextBlock Style="{DynamicResource EntryWindowsTextBlockStyle}"
                                Margin="3, 0"
                                Text="Password"/>
-                    
 
-                    <userControls:ClearablePasswordBox Password="{Binding Password, Mode=TwoWay, ValidatesOnExceptions=True}" 
+
+                    <userControls:ClearablePasswordBox x:Name="mainPassBox" 
+                                                       Password="{Binding Password, Mode=TwoWay, ValidatesOnExceptions=True}" 
+                                                       RelatedPasswordBox="{Binding ElementName=confirmPassBox, UpdateSourceTrigger=PropertyChanged}"
                                                        Style="{DynamicResource EntryWindowsPasswordBoxStyle}"
                                                        Margin="0, 10, 0, 20"
                                                        PlaceholderText="Enter password..."/>
@@ -64,7 +66,9 @@
                                Text="Confirm Password"/>
                     
 
-                    <userControls:ClearablePasswordBox Password="{Binding ConfirmationPassword, Mode=TwoWay, ValidatesOnExceptions=True}" 
+                    <userControls:ClearablePasswordBox x:Name="confirmPassBox" 
+                                                       Password="{Binding ConfirmationPassword, Mode=TwoWay, ValidatesOnExceptions=True}" 
+                                                       RelatedPasswordBox="{Binding ElementName=mainPassBox, UpdateSourceTrigger=PropertyChanged}"
                                                        Style="{DynamicResource EntryWindowsPasswordBoxStyle}"
                                                        Margin="0, 10, 0, 20"
                                                        PlaceholderText="Enter password again..."/>
