dev.1.73. addition of TabIndex for Login- and RegistrationView's

--- a/Chat/MVVM/Views/UserControls/ClearablePasswordBox.xaml
+++ b/Chat/MVVM/Views/UserControls/ClearablePasswordBox.xaml
@@ -43,6 +43,7 @@
         
         <PasswordBox x:Name="PassBox" 
                      Panel.ZIndex="1"
+                     TabIndex="0"
                      infrastucture:BoundPasswordBox.BoundPassword="{Binding Path=Password, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                      CaretBrush="{Binding Foreground}"
                      Foreground="{Binding Foreground}"
