--- a/Chat/MVVM/Views/LoginView.xaml
+++ b/Chat/MVVM/Views/LoginView.xaml
@@ -36,6 +36,7 @@
 
                 <userControls:ClearableTextBox Text="{Binding Email, Mode=TwoWay, ValidatesOnExceptions=True}"
                                                Style="{StaticResource EntryWindowsTextBoxStyle}" 
+                                               TabIndex="0"
                                                Margin="0, 10"
                                                PlaceholderText="Enter email..."/>
 
@@ -44,12 +45,14 @@
                            Margin="3,10" 
                            Text="Password"/>
 
-                
+
                 <userControls:ClearablePasswordBox Password="{Binding Password, Mode=TwoWay, ValidatesOnExceptions=True}" 
                                                    Style="{DynamicResource EntryWindowsPasswordBoxStyle}"
+                                                   TabIndex="1"
                                                    PlaceholderText="Enter password..."/>
 
-                <CheckBox Margin="3,5,0,8" 
+                <CheckBox TabIndex="2" 
+                          Margin="3,5,0,8" 
                           BorderBrush="{DynamicResource MainBorderBrush}" 
                           Background="{DynamicResource MainBackground}" 
                           Foreground="{DynamicResource MainForeground}"
@@ -62,6 +65,7 @@
 
                 
                 <ui:Button Command="{Binding SignInCommand}" 
+                           TabIndex="3"
                            Margin="0, 15, 0, 0" 
                            HorizontalAlignment="Stretch" 
                            Appearance="Success" 
