--- a/Chat/MVVM/Views/RegistrationView.xaml
+++ b/Chat/MVVM/Views/RegistrationView.xaml
@@ -34,6 +34,7 @@
 
                     <userControls:ClearableTextBox Text="{Binding Username, Mode=TwoWay, ValidatesOnExceptions=True}" 
                                                    Style="{DynamicResource EntryWindowsTextBoxStyle}"
+                                                   TabIndex="0"
                                                    Margin="0, 10, 0, 20"
                                                    PlaceholderText="Enter username..."/>
 
@@ -44,6 +45,7 @@
 
                     <userControls:ClearableTextBox Text="{Binding Email, Mode=TwoWay, ValidatesOnExceptions=True}" 
                                                    Style="{DynamicResource EntryWindowsTextBoxStyle}"
+                                                   TabIndex="1"
                                                    Margin="0, 10, 0, 20"
                                                    PlaceholderText="Enter email..."/>
 
@@ -57,6 +59,7 @@
                                                        Password="{Binding Password, Mode=TwoWay, ValidatesOnExceptions=True}" 
                                                        RelatedPasswordBox="{Binding ElementName=confirmPassBox, UpdateSourceTrigger=PropertyChanged}"
                                                        Style="{DynamicResource EntryWindowsPasswordBoxStyle}"
+                                                       TabIndex="2"
                                                        Margin="0, 10, 0, 20"
                                                        PlaceholderText="Enter password..."/>
                     
@@ -70,11 +73,13 @@
                                                        Password="{Binding ConfirmationPassword, Mode=TwoWay, ValidatesOnExceptions=True}" 
                                                        RelatedPasswordBox="{Binding ElementName=mainPassBox, UpdateSourceTrigger=PropertyChanged}"
                                                        Style="{DynamicResource EntryWindowsPasswordBoxStyle}"
+                                                       TabIndex="3"
                                                        Margin="0, 10, 0, 20"
                                                        PlaceholderText="Enter password again..."/>
-                    
+
 
                     <ui:Button Command="{Binding SignUpCommand}" 
+                               TabIndex="4"
                                Margin="0, 5, 0, 0"
                                HorizontalAlignment="Stretch"
                                Appearance="Success"
