--- a/Chat/MVVM/Views/RecoveryView.xaml
+++ b/Chat/MVVM/Views/RecoveryView.xaml
@@ -21,6 +21,69 @@
 
         <userControls:Logotype Height="80"/>
 
+        <Grid Margin="0, 30">
+
+            <userControls:FilledRoundedBorder Style="{StaticResource EntryWindowsFilledRoundedBorderStyle}"/>
+
+            <StackPanel Margin="24">
+
+                <TextBlock Style="{StaticResource EntryWindowsTextBlockStyle}"
+                           Margin="3,0"
+                           Text="Enter your user account's email address!"/>
+
+                <userControls:ClearableTextBox Style="{StaticResource EntryWindowsTextBoxStyle}"
+                                               Margin="0, 10"
+                                               PlaceholderText="Enter email..."/>
+
+                <ui:Button Margin="0, 15, 0, 0" 
+                           HorizontalAlignment="Stretch" 
+                           Appearance="Success" 
+                           Background="Green" 
+                           Foreground="{DynamicResource MainForeground}">
+
+                    <TextBlock Style="{DynamicResource EntryWindowsTextBlockStyle}"
+                               Text="Reset password"/>
+
+                </ui:Button>
+
+            </StackPanel>
+
+        </Grid>
+
+        <Grid>
+
+            <userControls:FilledRoundedBorder Style="{StaticResource EntryWindowsFilledRoundedBorderStyle}"
+                                              Background="Transparent"/>
+
+            <StackPanel Margin="16" 
+                        HorizontalAlignment="Center">
+
+                <ui:Button HorizontalAlignment="Center" 
+                           Appearance="Dark" 
+                           Background="Transparent">
+
+                    <TextBlock Style="{StaticResource EntryWindowsHyperlinkStyle}"
+                               Text="Back to 'Sign in'"/>
+
+                </ui:Button>
+
+
+                <ui:Button HorizontalAlignment="Center" 
+                           Margin="0,6,0,0" 
+                           Appearance="Dark" 
+                           Background="Transparent">
+
+                    <TextBlock Style="{StaticResource EntryWindowsHyperlinkStyle}"
+                               Text="Create an account"/>
+
+                </ui:Button>
+
+            </StackPanel>
+            
+            
+
+        </Grid>
+
     </StackPanel>
     
 </UserControl>
