--- a/Chat/MVVM/Views/RecoveryView.xaml
+++ b/Chat/MVVM/Views/RecoveryView.xaml
@@ -20,6 +20,7 @@
                    Text="Recovery of Password"/>
 
         <userControls:Logotype Height="80"/>
+        
 
         <Grid Margin="0, 30">
 
@@ -31,11 +32,15 @@
                            Margin="3,0"
                            Text="Enter your user account's email address!"/>
 
-                <userControls:ClearableTextBox Style="{StaticResource EntryWindowsTextBoxStyle}"
+
+                <userControls:ClearableTextBox Text="{Binding Email, Mode=TwoWay, ValidatesOnExceptions=True}"
+                                               Style="{StaticResource EntryWindowsTextBoxStyle}"
                                                Margin="0, 10"
                                                PlaceholderText="Enter email..."/>
+                
 
-                <ui:Button Margin="0, 15, 0, 0" 
+                <ui:Button Command="{Binding ResetPasswordCommand}" 
+                           Margin="0, 15, 0, 0" 
                            HorizontalAlignment="Stretch" 
                            Appearance="Success" 
                            Background="Green" 
@@ -58,7 +63,8 @@
             <StackPanel Margin="16" 
                         HorizontalAlignment="Center">
 
-                <ui:Button HorizontalAlignment="Center" 
+                <ui:Button Command="{Binding NavigateToLoginCommand}" 
+                           HorizontalAlignment="Center" 
                            Appearance="Dark" 
                            Background="Transparent">
 
@@ -68,7 +74,8 @@
                 </ui:Button>
 
 
-                <ui:Button HorizontalAlignment="Center" 
+                <ui:Button Command="{Binding NavigateToRegistrationCommand}" 
+                           HorizontalAlignment="Center" 
                            Margin="0,6,0,0" 
                            Appearance="Dark" 
                            Background="Transparent">
@@ -79,8 +86,6 @@
                 </ui:Button>
 
             </StackPanel>
-            
-            
 
         </Grid>
 
