--- a/Chat/App.xaml
+++ b/Chat/App.xaml
@@ -53,7 +53,11 @@
                     <DataTemplate DataType="{x:Type viewModels:RecoveryViewModel}">
                         <views:RecoveryView/>
                     </DataTemplate>
-                    
+
+                    <DataTemplate DataType="{x:Type viewModels:CodeConfirmationViewModel}">
+                        <views:CodeConfirmationView/>
+                    </DataTemplate>
+
                 </ResourceDictionary>
                 
             </ResourceDictionary.MergedDictionaries>
