--- a/Chat/MVVM/Views/CodeConfirmationView.xaml
+++ b/Chat/MVVM/Views/CodeConfirmationView.xaml
@@ -4,9 +4,84 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Chat.MVVM.Views"
+             xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+             xmlns:userControls="clr-namespace:Chat.MVVM.Views.UserControls" 
+             xmlns:viewModels="clr-namespace:Chat.MVVM.ViewModels" 
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            
-    </Grid>
+             d:DesignHeight="450" d:DesignWidth="800"
+             d:DataContext="{d:DesignInstance Type=viewModels:CodeConfirmationViewModel}">
+
+    <StackPanel HorizontalAlignment="Center"
+                Background="{DynamicResource MainBackground}"
+                Width="600">
+
+        <TextBlock Style="{StaticResource EntryWindowsCaptionStyle}"
+                   Text="Confirmation of Recovery Code"/>
+
+        <userControls:Logotype Height="80"/>
+
+        <Grid Margin="0,30">
+
+            <userControls:FilledRoundedBorder Style="{StaticResource EntryWindowsFilledRoundedBorderStyle}"/>
+
+            <StackPanel Margin="24">
+
+                <TextBlock Style="{StaticResource EntryWindowsTextBlockStyle}"
+                           Margin="3,0"
+                           Text="Enter recovery code from the email!"/>
+
+
+                <userControls:ClearableTextBox Style="{StaticResource EntryWindowsTextBoxStyle}"
+                                               Margin="0, 10"
+                                               PlaceholderText="Enter code..."/>
+
+                <ui:Button Margin="0, 15, 0, 0" 
+                           HorizontalAlignment="Stretch" 
+                           Appearance="Success" 
+                           Background="Green" 
+                           Foreground="{DynamicResource MainForeground}">       
+
+                    <TextBlock Style="{DynamicResource EntryWindowsTextBlockStyle}"
+                               Text="Confirm"/>
+
+                </ui:Button>
+
+            </StackPanel>
+
+        </Grid>
+
+        <Grid>
+
+            <userControls:FilledRoundedBorder Style="{StaticResource EntryWindowsFilledRoundedBorderStyle}"
+                                              Background="Transparent"/>
+
+            <StackPanel Margin="16" 
+                        HorizontalAlignment="Center">
+
+                <ui:Button HorizontalAlignment="Center" 
+                           Appearance="Dark" 
+                           Background="Transparent">
+
+                    <TextBlock Style="{StaticResource EntryWindowsHyperlinkStyle}"
+                               Text="Back to 'Sign in'"/>
+
+                </ui:Button>
+
+
+                <ui:Button HorizontalAlignment="Center" 
+                           Margin="0,6,0,0" 
+                           Appearance="Dark" 
+                           Background="Transparent">
+
+                    <TextBlock Style="{StaticResource EntryWindowsHyperlinkStyle}"
+                               Text="Create an account"/>
+
+                </ui:Button>
+
+            </StackPanel>
+
+        </Grid>
+
+    </StackPanel>
+    
 </UserControl>
