temp.4.12. realization of CodeConfirmationViewModel

--- a/Chat/MVVM/Views/CodeConfirmationView.xaml
+++ b/Chat/MVVM/Views/CodeConfirmationView.xaml
@@ -31,11 +31,13 @@
                            Text="Enter recovery code from the email!"/>
 
 
-                <userControls:ClearableTextBox Style="{StaticResource EntryWindowsTextBoxStyle}"
+                <userControls:ClearableTextBox Text="{Binding Code, Mode=TwoWay, ValidatesOnExceptions=True}" 
+                                               Style="{StaticResource EntryWindowsTextBoxStyle}"
                                                Margin="0, 10"
                                                PlaceholderText="Enter code..."/>
 
-                <ui:Button Margin="0, 15, 0, 0" 
+                <ui:Button Command="{Binding ConfirmCommand}" 
+                           Margin="0, 15, 0, 0" 
                            HorizontalAlignment="Stretch" 
                            Appearance="Success" 
                            Background="Green" 
@@ -58,7 +60,8 @@
             <StackPanel Margin="16" 
                         HorizontalAlignment="Center">
 
-                <ui:Button HorizontalAlignment="Center" 
+                <ui:Button Command="{Binding NavigateToLoginCommand}" 
+                           HorizontalAlignment="Center" 
                            Appearance="Dark" 
                            Background="Transparent">
 
@@ -68,7 +71,8 @@
                 </ui:Button>
 
 
-                <ui:Button HorizontalAlignment="Center" 
+                <ui:Button Command="{Binding NavigateToRegistrationCommand}" 
+                           HorizontalAlignment="Center" 
                            Margin="0,6,0,0" 
                            Appearance="Dark" 
                            Background="Transparent">
