temp.4.20. addition of ChangePasswordView

--- a/Chat/App.xaml
+++ b/Chat/App.xaml
@@ -58,6 +58,10 @@
                         <views:CodeConfirmationView/>
                     </DataTemplate>
 
+                    <DataTemplate DataType="{x:Type viewModels:ChangePasswordViewModel}">
+                        <views:ChangePasswordView/>
+                    </DataTemplate>
+
                 </ResourceDictionary>
                 
             </ResourceDictionary.MergedDictionaries>
