temp.4.22. addition of UI in ChangePasswordView

--- a/Chat/MVVM/Views/ChangePasswordView.xaml
+++ b/Chat/MVVM/Views/ChangePasswordView.xaml
@@ -4,9 +4,83 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Chat.MVVM.Views"
+             xmlns:userControls="clr-namespace:Chat.MVVM.Views.UserControls"
+             xmlns:viewModels="clr-namespace:Chat.MVVM.ViewModels" 
+             xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
+             d:DesignHeight="450" d:DesignWidth="800"
+             d:DataContext="{d:DesignInstance Type=viewModels:ChangePasswordViewModel}">
+    
+    <StackPanel Background="{DynamicResource MainBackground}"
+                HorizontalAlignment="Center"
+                Width="500">
+
+        <TextBlock Style="{DynamicResource EntryWindowsCaptionStyle}" 
+           Text="Change Password"/>
+
+        <userControls:Logotype Height="80"/>
+
+        <Grid Margin="0,30">
+
+            <userControls:FilledRoundedBorder Style="{DynamicResource EntryWindowsFilledRoundedBorderStyle}"/>
+
+            <StackPanel Margin="24">
+
+                <TextBlock Style="{DynamicResource EntryWindowsTextBlockStyle}"
+                           Margin="3, 0"
+                           Text="New password"/>
+
+
+                <userControls:ClearablePasswordBox Style="{DynamicResource EntryWindowsPasswordBoxStyle}"
+                                                   Margin="0, 10"
+                                                   PlaceholderText="Enter password..."/>
+
+
+                <TextBlock Style="{DynamicResource EntryWindowsTextBlockStyle}"
+                           Margin="3, 10"
+                           Text="Confirm new password"/>
+
+
+                <userControls:ClearablePasswordBox Style="{DynamicResource EntryWindowsPasswordBoxStyle}"
+                                                   PlaceholderText="Enter password again..."/>
+
+
+                <ui:Button Margin="0, 25, 0, 0"
+                           HorizontalAlignment="Stretch"
+                           Appearance="Success"
+                           Background="Green"
+                           Foreground="{DynamicResource MainForeground}">
+
+                    <TextBlock Style="{DynamicResource EntryWindowsTextBlockStyle}"
+                               Text="Submit"/>
+
+                </ui:Button>
+
+            </StackPanel>
             
-    </Grid>
+        </Grid>
+
+        <Grid>
+
+            <userControls:FilledRoundedBorder Style="{DynamicResource EntryWindowsFilledRoundedBorderStyle}"
+                                              Background="Transparent"/>
+
+            <StackPanel Margin="16"
+                        HorizontalAlignment="Center">
+
+                <ui:Button HorizontalAlignment="Center" 
+                           Appearance="Dark"
+                           Background="Transparent">
+
+                    <TextBlock Style="{StaticResource EntryWindowsHyperlinkStyle}"
+                               Text="Back to 'Sign in'"/>
+
+                </ui:Button>
+
+            </StackPanel>
+
+        </Grid>
+
+    </StackPanel>
+    
 </UserControl>
