temp.4.23. realization of ChangePasswordViewModel

--- a/Chat/MVVM/Views/ChangePasswordView.xaml
+++ b/Chat/MVVM/Views/ChangePasswordView.xaml
@@ -31,7 +31,10 @@
                            Text="New password"/>
 
 
-                <userControls:ClearablePasswordBox Style="{DynamicResource EntryWindowsPasswordBoxStyle}"
+                <userControls:ClearablePasswordBox x:Name="mainPassBox" 
+                                                   Password="{Binding Password, Mode=TwoWay, ValidatesOnExceptions=True}" 
+                                                   RelatedPasswordBox="{Binding ElementName=confirmPassBox, UpdateSourceTrigger=PropertyChanged}"
+                                                   Style="{DynamicResource EntryWindowsPasswordBoxStyle}"
                                                    Margin="0, 10"
                                                    PlaceholderText="Enter password..."/>
 
@@ -41,11 +44,15 @@
                            Text="Confirm new password"/>
 
 
-                <userControls:ClearablePasswordBox Style="{DynamicResource EntryWindowsPasswordBoxStyle}"
+                <userControls:ClearablePasswordBox x:Name="confirmPassBox" 
+                                                   Password="{Binding ConfirmationPassword, Mode=TwoWay, ValidatesOnExceptions=True}" 
+                                                   RelatedPasswordBox="{Binding ElementName=mainPassBox, UpdateSourceTrigger=PropertyChanged}"
+                                                   Style="{DynamicResource EntryWindowsPasswordBoxStyle}"
                                                    PlaceholderText="Enter password again..."/>
 
 
-                <ui:Button Margin="0, 25, 0, 0"
+                <ui:Button Command="{Binding SubmitCommand}" 
+                           Margin="0, 25, 0, 0"
                            HorizontalAlignment="Stretch"
                            Appearance="Success"
                            Background="Green"
@@ -68,7 +75,8 @@
             <StackPanel Margin="16"
                         HorizontalAlignment="Center">
 
-                <ui:Button HorizontalAlignment="Center" 
+                <ui:Button Command="{Binding NavigateToLoginCommand}" 
+                           HorizontalAlignment="Center" 
                            Appearance="Dark"
                            Background="Transparent">
 
