--- a/Chat/MVVM/Views/ChangePasswordView.xaml
+++ b/Chat/MVVM/Views/ChangePasswordView.xaml
@@ -51,17 +51,10 @@
                                                    PlaceholderText="Enter password again..."/>
 
 
-                <ui:Button Command="{Binding SubmitCommand}" 
-                           Margin="0, 25, 0, 0"
-                           HorizontalAlignment="Stretch"
-                           Appearance="Success"
-                           Background="Green"
-                           Foreground="{DynamicResource MainForeground}">
-
-                    <TextBlock Style="{DynamicResource EntryWindowsTextBlockStyle}"
-                               Text="Submit"/>
-
-                </ui:Button>
+                <userControls:Button Command="{Binding SubmitCommand}"
+                                     Style="{StaticResource EntryWindowsActionCommandStyle}"
+                                     Margin="0, 25, 0, 0"
+                                     Text="Submit"/>
 
             </StackPanel>
             
@@ -75,15 +68,9 @@
             <StackPanel Margin="16"
                         HorizontalAlignment="Center">
 
-                <ui:Button Command="{Binding NavigateToLoginCommand}" 
-                           HorizontalAlignment="Center" 
-                           Appearance="Dark"
-                           Background="Transparent">
-
-                    <TextBlock Style="{StaticResource EntryWindowsHyperlinkStyle}"
-                               Text="Back to 'Sign in'"/>
-
-                </ui:Button>
+                <userControls:Button Command="{Binding NavigateToLoginCommand}"
+                                     Style="{StaticResource EntryWindowsNavigationCommandStyle}"
+                                     Text="Back to 'Sign in'"/>
 
             </StackPanel>
 
