--- a/Chat/MVVM/Views/CodeConfirmationView.xaml
+++ b/Chat/MVVM/Views/CodeConfirmationView.xaml
@@ -36,17 +36,10 @@
                                                Margin="0, 10"
                                                PlaceholderText="Enter code..."/>
 
-                <ui:Button Command="{Binding ConfirmCommand}" 
-                           Margin="0, 15, 0, 0" 
-                           HorizontalAlignment="Stretch" 
-                           Appearance="Success" 
-                           Background="Green" 
-                           Foreground="{DynamicResource MainForeground}">       
-
-                    <TextBlock Style="{DynamicResource EntryWindowsTextBlockStyle}"
-                               Text="Confirm"/>
-
-                </ui:Button>
+                <userControls:Button Command="{Binding ConfirmCommand}"
+                                     Style="{StaticResource EntryWindowsActionCommandStyle}"
+                                     Margin="0, 15, 0, 0" 
+                                     Text="Confirm"/>
 
             </StackPanel>
 
@@ -60,27 +53,13 @@
             <StackPanel Margin="16" 
                         HorizontalAlignment="Center">
 
-                <ui:Button Command="{Binding NavigateToLoginCommand}" 
-                           HorizontalAlignment="Center" 
-                           Appearance="Dark" 
-                           Background="Transparent">
+                <userControls:Button Command="{Binding NavigateToLoginCommand}"
+                                     Style="{StaticResource EntryWindowsNavigationCommandStyle}"
+                                     Text="Back to 'Sign in'"/>
 
-                    <TextBlock Style="{StaticResource EntryWindowsHyperlinkStyle}"
-                               Text="Back to 'Sign in'"/>
-
-                </ui:Button>
-
-
-                <ui:Button Command="{Binding NavigateToRegistrationCommand}" 
-                           HorizontalAlignment="Center" 
-                           Margin="0,6,0,0" 
-                           Appearance="Dark" 
-                           Background="Transparent">
-
-                    <TextBlock Style="{StaticResource EntryWindowsHyperlinkStyle}"
-                               Text="Create an account"/>
-
-                </ui:Button>
+                <userControls:Button Command="{Binding NavigateToRegistrationCommand}"
+                                     Style="{StaticResource EntryWindowsNavigationCommandStyle}"
+                                     Text="Create an account"/> 
 
             </StackPanel>
 
